# HaoTian

./: .gitignore  ALTERNATIVE_SOLUTIONS.md  CUBISM4_MIGRATION.md  FIDELITY_INTEGRATION.md  FINAL_TEST_INSTRUCTIONS.md  FINANCE_MODULE.md  LIVE2D_CDN_FIX.md  LIVE2D_DEBUG_STEPS.md  LIVE2D_ERROR_DIAGNOSIS.md  LIVE2D_FINAL_WORKING_SOLUTION.md  LIVE2D_ROOT_CAUSE_ANALYSIS.md  MODEL_CHANGE_LOG.md  ORGANIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_HEALTH_REPORT.md  README.md  URGENT_BROWSER_CACHE_FIX.md  USER_MANUAL.md  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  server.js  tailwind.config.ts
docs/: _FILE_ORGANIZATION.md
docs/archives/: CHANGELOG_DATABASE.md  LIVE2D_STATUS.md  PROJECT_STATUS.md  SUMMARY.md
docs/features/: AVATAR_GUIDE.md  LIVE2D_SETUP_GUIDE.md  MEMORY_SYSTEM.md  NAVIGATION_UPDATE.md  VOICE_SYSTEM.md  download-live2d-model.sh  setup-avatar.sh
docs/setup/: DATABASE_CHANGE_GUIDE.md  STARTUP_GUIDE.md  TAURI_DESKTOP_GUIDE.md  health-check.sh  setup.sh  tauri-setup.sh
docs/troubleshooting/: LIVE2D_CDN_FIX.md  LIVE2D_COMPLETE_SOLUTION.md  LIVE2D_FINAL_FIX.md  LIVE2D_FIX.md  TROUBLESHOOTING_AVATAR.md
prisma/: schema.prisma
public/models/: README.md  avatar-config.example.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Chat.tsx  Composer.tsx  FeedbackBar.tsx  FinanceSpeaker.tsx  FinanceTicker.tsx  MessageList.tsx  Navigation.tsx  TypingDots.tsx
src/hooks/: useAvatar.ts  useMemory.ts  useVoice.ts
src/lib/: db.ts  env.ts  (+8 more)
(+29 files in other folders)
